# 3Dprog24

./: CMakeLists.txt  FinalCompulsory2024.cpp
CustomLibrary/: MathFunctionsLibrary.cpp  MathFunctionsLibrary.h
core/actors/: Scene.cpp  Scene.h
core/camera/: Camera.h
core/program/: Application.cpp  Application.h  Window.cpp  Window.h
libs/eigen/: CMakeLists.txt
